--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ android {
 
 dependencies {
 
+    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.1'
+
     implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
