--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.1'
 
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+
     implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
