--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
             android:name=".AddingDeviceActivity"
             android:exported="false" />
 
+        <activity
+            android:name=".AddingDeviceLastActivity"
+            android:exported="false" />
+
         <service android:name="org.eclipse.paho.android.service.MqttService" />
 
         <service android:name="org.eclipse.paho.android.service.MqttService">
